kubernetes/pod_example.yaml
apiVersion: v1
kind: Pod
metadata:
  name: liveness-http
  namespace: <your-namespace>
spec:
  containers:
  - name: nginx
    image: nginx:1.7.9
    ports:
    - containerPort: 80
