kubernetes/pod_with_pvc.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx-storage-test
  namespace: <your-namespace>
spec:
  volumes:
    - name: content-storage
      persistentVolumeClaim:
       claimName: nginx-pvc
  containers:
  - name: nginx
    image: nginx:1.7.9
    ports:
    - containerPort: 80
    volumeMounts:
    - mountPath: "/usr/share/nginx/html"
      name: content-storage
