kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx
  namespace: <your-namespace>
  labels:
    run: nginx
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    run: nginx
  type: LoadBalancer
