kubernetes/service_https.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-https
  namespace: <your-namespace>
  labels:
    app: nginx-https
spec:
  type: LoadBalancer
  ports:
  - port: 80
    protocol: TCP
    name: http
  - port: 443
    protocol: TCP
    name: https
  selector:
    app: nginx-https
